--- a/app/PokemonDetail/PokemonDetailEdit.html
+++ b/app/PokemonDetail/PokemonDetailEdit.html
@@ -1,10 +1,10 @@
 <form name="edit" novalidate data-layout="row">
     <p>Вес: <input type="number" maxlength="20" ng-model="pokemon.weight">, рост: <input type="number" maxlength="20" ng-model="pokemon.height"></p>
     <div>
-        <button class="btn-call-to-action btn-small" ui-sref="detail" data-ng-click="save()">
+        <button class="btn-call-to-action" ui-sref="detail" data-ng-click="save()">
             Save
         </button>
-        <button class="btn-cancel btn-small" ui-sref="detail" data-ng-click="cancel()">
+        <button class="btn-cancel" ui-sref="detail" data-ng-click="cancel()">
             Cancel
         </button>
     </div>
